[package]
name = "number-5"
version = "0.1.0"
authors = ["clemente"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = { version = "1.0.9", features = ["derive"] }
rand = "0.6.5"
reqwest = "0.9.15"
chrono = "0.4"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
