[package]
name = "number-5"
version = "0.1.0"
authors = ["clemente"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.130", features = ["derive"] }
rand = "0.8.4"
reqwest = { version = "0.11.6", features = ["json"] }
chrono = "0.4.19"
pretty_env_logger = "0.4.0"